fix scrollbar to have different color in light and dark mode and make theme more bluish

--- a/src/globals.css
+++ b/src/globals.css
@@ -7,16 +7,17 @@
     --primary: 0 0% 10%;
     --primary-foreground: 0 0% 98%;
 
-    --foreground: 0 0% 5%;
-    --foreground-muted: 0 0% 55%;
+    --foreground: 240 8% 5%;
+    --foreground-muted: 240 8% 55%;
 
-    --background: 0 0% 97%;
-    --background-card: 0 0% 98.5%;
-    --background-input: 0 0% 100%;
-    --background-popover: 0 0% 99%;
+    --background: 240 24% 97%;
+    --background-card: 240 8% 98.5%;
+    --background-input: 240 8% 100%;
+    --background-popover: 240 8% 99%;
 
-    --accent: 0, 0%, 0%, 0.05;
-    --border: 0 0% 92%;
+    --accent: 240, 80%, 20%, 0.05;
+    --border: 240 8% 92%;
+    --scrollbar: 240 8% 85%;
 
     --radius: 0.35rem;
   }
@@ -25,16 +26,17 @@
     --primary: 0 0% 95%;
     --primary-foreground: 0 0% 8%;
 
-    --foreground: 240 3% 98%;
-    --foreground-muted: 240 3% 55%;
+    --foreground: 240 8% 98%;
+    --foreground-muted: 240 8% 55%;
 
-    --background: 240 6% 7%;
-    --background-card: 240 6% 10%;
-    --background-input: 240 6% 13%;
-    --background-popover: 240 6% 10%;
+    --background: 240 8% 6%;
+    --background-card: 240 8% 8%;
+    --background-input: 240 8% 12%;
+    --background-popover: 240 8% 10%;
 
-    --accent: 240, 6%, 100%, 0.1;
-    --border: 240 6% 18%;
+    --accent: 240, 16%, 80%, 0.1;
+    --border: 240 8% 18%;
+    --scrollbar: 240 8% 20%;
   }
 }
 
@@ -44,7 +46,7 @@
   }
 
   html {
-    @apply h-full scrollbar scrollbar-track-transparent scrollbar-thumb-neutral-400;
+    @apply h-full scrollbar scrollbar-track-transparent scrollbar-thumb-scrollbar;
   }
 
   body {
